--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,20 +19,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  algolia: ^0.1.7
   cloud_firestore: ^0.14.1+3
+  community_material_icon: ^5.4.55
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0+1
   firebase_database: ^4.1.1
   firebase_storage: ^4.0.1
   flutter_spinkit: ^4.1.2
-  rflutter_alert: ^1.1.0
-  focused_menu: ^1.0.1
-  community_material_icon: ^5.4.55
   flutter_svg: ^0.19.0
+  focused_menu: ^1.0.1
+  google_fonts: ^1.1.1
   image_picker: ^0.6.7+11
-  algolia: ^0.1.7
   provider: ^4.3.2+2
+  rflutter_alert: ^1.1.0
   toast: ^0.1.5
 
 dev_dependencies:
