--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   algolia: ^0.1.7
+  cached_network_image: ^2.3.3
   cloud_firestore: ^0.14.1+3
   community_material_icon: ^5.4.55
   cupertino_icons: ^1.0.0
@@ -30,8 +31,12 @@ dependencies:
   flutter_spinkit: ^4.1.2
   flutter_svg: ^0.19.0
   focused_menu: ^1.0.1
+  get: ^3.15.0
   google_fonts: ^1.1.1
+  http: ^0.12.2
   image_picker: ^0.6.7+11
+  logger: ^0.9.4
+  meta: ^1.2.3
   provider: ^4.3.2+2
   rflutter_alert: ^1.1.0
   toast: ^0.1.5
