--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,22 +19,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  algolia: ^0.1.7
   cached_network_image: ^2.3.3
-  cloud_firestore: ^0.14.1+3
+  cloud_firestore: ^0.14.2
   community_material_icon: ^5.4.55
+  connectivity: ^2.0.1
   cupertino_icons: ^1.0.0
-  firebase_auth: ^0.18.1+2
-  firebase_core: ^0.5.0+1
-  firebase_database: ^4.1.1
-  firebase_storage: ^4.0.1
-  flutter_spinkit: ^4.1.2
-  flutter_svg: ^0.19.0
+  firebase_auth: ^0.18.2
+  firebase_core: ^0.5.1
+  firebase_database: ^4.2.0
+  firebase_storage: ^5.0.0
+  flutter_spinkit: ^4.1.2+1
+  flutter_svg: ^0.19.1
   focused_menu: ^1.0.1
   get: ^3.15.0
   google_fonts: ^1.1.1
   http: ^0.12.2
-  image_picker: ^0.6.7+11
+  image_picker: ^0.6.7+12
   logger: ^0.9.4
   meta: ^1.2.3
   provider: ^4.3.2+2
