--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^4.3.2+2
   rflutter_alert: ^1.1.0
   toast: ^0.1.5
+  data_connection_checker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
